[package]
name = "kanal"
version = "0.1.1"
edition = "2021"
authors = ["Khashayar Fereidani"]
description = "The fast sync and async channel that Rust deserves"
repository = "https://github.com/fereidani/kanal"
documentation = "https://docs.rs/kanal"
keywords = ["channel", "mpsc", "mpmc", "async"]
categories = ["concurrency", "data-structures", "asynchronous"]
license = "MIT"
readme = "README.md"

[dependencies]
cacheguard = "0.1.0"
futures-core = { version = "0.3.31", optional = true }
lock_api = "0.4.12"

[dev-dependencies]
anyhow = "1.0.98"
criterion = "0.6"
crossbeam = "0.8.4"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "test-util", "macros"] }
futures = "0.3.31"

[features]
async = ["futures-core"]
std-mutex = []
default = ["async"]

[[bench]]
name = "sync"
harness = false

[[bench]]
name = "async"
harness = false
